// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <InjectIntl(TimeInput)
    name="time-input"
  >
    <TimeInput
      disabled={false}
      hourAttributes={Object {}}
      inputAttributes={Object {}}
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      isIncomplete={false}
      isInvalid={false}
      isInvalidMeridiem={false}
      minuteAttributes={Object {}}
      name="time-input"
      onBlur={null}
      onChange={null}
      required={false}
      secondAttributes={Object {}}
      showSeconds={false}
      variant="24-hour"
    >
      <div
        className="time-input-container orion-fusion-theme"
      >
        <div
          className="time-input"
        >
          <input
            name="time-input"
            type="hidden"
            value=""
          />
          <Input
            aria-describedby="terra-time-input-description-format-50b0b56e-3cea-40a6-a0ea-7311801cc777"
            aria-label="Terra.timeInput.hours"
            className="time-input-hour"
            disabled={false}
            isIncomplete={false}
            isInvalid={false}
            maxLength="2"
            name="terra-time-hour-time-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            pattern="\\\\d*"
            refCallback={[Function]}
            required={false}
            size="2"
            type="text"
            value=""
          >
            <input
              aria-describedby="terra-time-input-description-format-50b0b56e-3cea-40a6-a0ea-7311801cc777"
              aria-label="Terra.timeInput.hours"
              className="form-input time-input-hour"
              disabled={false}
              maxLength="2"
              name="terra-time-hour-time-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              required={false}
              size="2"
              type="text"
              value=""
            />
          </Input>
          <span
            className="time-spacer"
          >
            :
          </span>
          <Input
            aria-describedby="terra-time-input-description-format-50b0b56e-3cea-40a6-a0ea-7311801cc777"
            aria-label="Terra.timeInput.minutes"
            className="time-input-minute"
            disabled={false}
            isIncomplete={false}
            isInvalid={false}
            maxLength="2"
            name="terra-time-minute-time-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            pattern="\\\\d*"
            refCallback={[Function]}
            required={false}
            size="2"
            type="text"
            value=""
          >
            <input
              aria-describedby="terra-time-input-description-format-50b0b56e-3cea-40a6-a0ea-7311801cc777"
              aria-label="Terra.timeInput.minutes"
              className="form-input time-input-minute"
              disabled={false}
              maxLength="2"
              name="terra-time-minute-time-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              required={false}
              size="2"
              type="text"
              value=""
            />
          </Input>
        </div>
        <div
          aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
          className="format-text"
          id="terra-time-input-description-format-50b0b56e-3cea-40a6-a0ea-7311801cc777"
        >
          (Terra.timeInput.hh:Terra.timeInput.mm)
        </div>
      </div>
    </TimeInput>
  </InjectIntl(TimeInput)>
</ThemeContextProvider>
`;

exports[`should ignore invalid times properly 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-dba4abd6-ea0b-4192-8e1b-d889d28065a8"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-dba4abd6-ea0b-4192-8e1b-d889d28065a8"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-dba4abd6-ea0b-4192-8e1b-d889d28065a8"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should ignore invalid times with seconds properly 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-e53fe7c6-369d-4ba3-a0fd-de929533fc58"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour with-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-e53fe7c6-369d-4ba3-a0fd-de929533fc58"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute with-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-e53fe7c6-369d-4ba3-a0fd-de929533fc58"
      aria-label="Terra.timeInput.seconds"
      className="time-input-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-second-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)"
    className="format-text"
    id="terra-time-input-description-format-e53fe7c6-369d-4ba3-a0fd-de929533fc58"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)
  </div>
</div>
`;

exports[`should not have duplicate ids on the page when multiple date pickers are initialized 1`] = `
<div
  intl="[object Object]"
>
  <div
    class="time-input-container"
  >
    <div
      class="time-input"
    >
      <input
        name="time-input"
        type="hidden"
        value=""
      />
      <input
        aria-describedby="terra-time-input-description-format-fa6e7540-09b2-43a1-a138-e337a74e2a4c"
        aria-label="Terra.timeInput.hours"
        class="form-input time-input-hour"
        maxlength="2"
        name="terra-time-hour-time-input"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        class="time-spacer"
      >
        :
      </span>
      <input
        aria-describedby="terra-time-input-description-format-fa6e7540-09b2-43a1-a138-e337a74e2a4c"
        aria-label="Terra.timeInput.minutes"
        class="form-input time-input-minute"
        maxlength="2"
        name="terra-time-minute-time-input"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
    </div>
    <div
      class="button-group meridiem-button-group"
    >
      <button
        aria-disabled="false"
        aria-pressed="true"
        class="button neutral button-group-button is-selected meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.am
          </span>
        </span>
      </button>
      <button
        aria-disabled="false"
        class="button neutral button-group-button meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.pm
          </span>
        </span>
      </button>
    </div>
    <div
      aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
      class="format-text"
      id="terra-time-input-description-format-fa6e7540-09b2-43a1-a138-e337a74e2a4c"
    >
      (Terra.timeInput.hh:Terra.timeInput.mm)
    </div>
  </div>
  <div
    class="time-input-container"
  >
    <div
      class="time-input"
    >
      <input
        name="time-input-2"
        type="hidden"
        value=""
      />
      <input
        aria-describedby="terra-time-input-description-format-924e5130-471a-4d33-af58-d8baedf2e71c"
        aria-label="Terra.timeInput.hours"
        class="form-input time-input-hour"
        maxlength="2"
        name="terra-time-hour-time-input-2"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        class="time-spacer"
      >
        :
      </span>
      <input
        aria-describedby="terra-time-input-description-format-924e5130-471a-4d33-af58-d8baedf2e71c"
        aria-label="Terra.timeInput.minutes"
        class="form-input time-input-minute"
        maxlength="2"
        name="terra-time-minute-time-input-2"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
    </div>
    <div
      class="button-group meridiem-button-group"
    >
      <button
        aria-disabled="false"
        aria-pressed="true"
        class="button neutral button-group-button is-selected meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.am
          </span>
        </span>
      </button>
      <button
        aria-disabled="false"
        class="button neutral button-group-button meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.pm
          </span>
        </span>
      </button>
    </div>
    <div
      aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
      class="format-text"
      id="terra-time-input-description-format-924e5130-471a-4d33-af58-d8baedf2e71c"
    >
      (Terra.timeInput.hh:Terra.timeInput.mm)
    </div>
  </div>
  <div
    class="time-input-container"
  >
    <div
      class="time-input"
    >
      <input
        name="time-input-3"
        type="hidden"
        value=""
      />
      <input
        aria-describedby="terra-time-input-description-format-631c34ef-28d6-445d-ac55-1c0db818a593"
        aria-label="Terra.timeInput.hours"
        class="form-input time-input-hour"
        maxlength="2"
        name="terra-time-hour-time-input-3"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        class="time-spacer"
      >
        :
      </span>
      <input
        aria-describedby="terra-time-input-description-format-631c34ef-28d6-445d-ac55-1c0db818a593"
        aria-label="Terra.timeInput.minutes"
        class="form-input time-input-minute"
        maxlength="2"
        name="terra-time-minute-time-input-3"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
    </div>
    <div
      class="button-group meridiem-button-group"
    >
      <button
        aria-disabled="false"
        aria-pressed="true"
        class="button neutral button-group-button is-selected meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.am
          </span>
        </span>
      </button>
      <button
        aria-disabled="false"
        class="button neutral button-group-button meridiem-button"
        type="button"
      >
        <span
          class="button-label text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.pm
          </span>
        </span>
      </button>
    </div>
    <div
      aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
      class="format-text"
      id="terra-time-input-description-format-631c34ef-28d6-445d-ac55-1c0db818a593"
    >
      (Terra.timeInput.hh:Terra.timeInput.mm)
    </div>
  </div>
</div>
`;

exports[`should pass in refCallback as the ref prop of the hour input element 1`] = `
<TimeInput
  disabled={false}
  hourAttributes={Object {}}
  inputAttributes={Object {}}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isIncomplete={false}
  isInvalid={false}
  isInvalidMeridiem={false}
  minuteAttributes={Object {}}
  name="time-input"
  onBlur={null}
  onChange={null}
  refCallback={
    [MockFunction] {
      "calls": Array [
        Array [
          <input
            aria-describedby="terra-time-input-description-format-9be76e11-2647-48e6-84e0-9190da6efd8f"
            aria-label="Terra.timeInput.hours"
            class="form-input time-input-hour"
            maxlength="2"
            name="terra-time-hour-time-input"
            pattern="\\\\d*"
            size="2"
            type="text"
            value=""
          />,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  required={false}
  secondAttributes={Object {}}
  showSeconds={false}
  variant="24-hour"
>
  <div
    className="time-input-container"
  >
    <div
      className="time-input"
    >
      <input
        name="time-input"
        type="hidden"
        value=""
      />
      <Input
        aria-describedby="terra-time-input-description-format-9be76e11-2647-48e6-84e0-9190da6efd8f"
        aria-label="Terra.timeInput.hours"
        className="time-input-hour"
        disabled={false}
        isIncomplete={false}
        isInvalid={false}
        maxLength="2"
        name="terra-time-hour-time-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        pattern="\\\\d*"
        refCallback={[Function]}
        required={false}
        size="2"
        type="text"
        value=""
      >
        <input
          aria-describedby="terra-time-input-description-format-9be76e11-2647-48e6-84e0-9190da6efd8f"
          aria-label="Terra.timeInput.hours"
          className="form-input time-input-hour"
          disabled={false}
          maxLength="2"
          name="terra-time-hour-time-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          pattern="\\\\d*"
          required={false}
          size="2"
          type="text"
          value=""
        />
      </Input>
      <span
        className="time-spacer"
      >
        :
      </span>
      <Input
        aria-describedby="terra-time-input-description-format-9be76e11-2647-48e6-84e0-9190da6efd8f"
        aria-label="Terra.timeInput.minutes"
        className="time-input-minute"
        disabled={false}
        isIncomplete={false}
        isInvalid={false}
        maxLength="2"
        name="terra-time-minute-time-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        pattern="\\\\d*"
        refCallback={[Function]}
        required={false}
        size="2"
        type="text"
        value=""
      >
        <input
          aria-describedby="terra-time-input-description-format-9be76e11-2647-48e6-84e0-9190da6efd8f"
          aria-label="Terra.timeInput.minutes"
          className="form-input time-input-minute"
          disabled={false}
          maxLength="2"
          name="terra-time-minute-time-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          pattern="\\\\d*"
          required={false}
          size="2"
          type="text"
          value=""
        />
      </Input>
    </div>
    <div
      aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
      className="format-text"
      id="terra-time-input-description-format-9be76e11-2647-48e6-84e0-9190da6efd8f"
    >
      (Terra.timeInput.hh:Terra.timeInput.mm)
    </div>
  </div>
</TimeInput>
`;

exports[`should render a 12 hour clock time input with seconds input 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-3152dba5-89dd-4893-ae76-be50ab9f9501"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour with-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-3152dba5-89dd-4893-ae76-be50ab9f9501"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute with-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-3152dba5-89dd-4893-ae76-be50ab9f9501"
      aria-label="Terra.timeInput.seconds"
      className="time-input-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-second-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <ButtonGroup
    className="meridiem-button-group"
    isBlock={false}
    onChange={[Function]}
    selectedKeys={
      Array [
        "Terra.timeInput.am",
      ]
    }
  >
    <ButtonGroupButton
      className="meridiem-button"
      isDisabled={false}
      key="Terra.timeInput.am"
      onBlur={[Function]}
      onFocus={[Function]}
      text="Terra.timeInput.am"
    />
    <ButtonGroupButton
      className="meridiem-button"
      isDisabled={false}
      key="Terra.timeInput.pm"
      onBlur={[Function]}
      onFocus={[Function]}
      text="Terra.timeInput.pm"
    />
  </ButtonGroup>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)"
    className="format-text"
    id="terra-time-input-description-format-3152dba5-89dd-4893-ae76-be50ab9f9501"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)
  </div>
</div>
`;

exports[`should render a 12 hour timepicker meridiem with buttons and seconds input when viewed on a mobile device 1`] = `
<div
  class="time-input-container"
>
  <div
    class="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="terra-time-input-description-format-045ec847-304b-4212-b07d-522bffa21825"
      aria-label="Terra.timeInput.hours"
      class="form-input time-input-hour with-second"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-045ec847-304b-4212-b07d-522bffa21825"
      aria-label="Terra.timeInput.minutes"
      class="form-input time-input-minute with-second"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-045ec847-304b-4212-b07d-522bffa21825"
      aria-label="Terra.timeInput.seconds"
      class="form-input time-input-second"
      maxlength="2"
      name="terra-time-second-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    class="button-group meridiem-button-group"
  >
    <button
      aria-disabled="false"
      aria-pressed="true"
      class="button neutral button-group-button is-selected meridiem-button"
      type="button"
    >
      <span
        class="button-label text-only"
      >
        <span
          class=""
        >
          Terra.timeInput.am
        </span>
      </span>
    </button>
    <button
      aria-disabled="false"
      class="button neutral button-group-button meridiem-button"
      type="button"
    >
      <span
        class="button-label text-only"
      >
        <span
          class=""
        >
          Terra.timeInput.pm
        </span>
      </span>
    </button>
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)"
    class="format-text"
    id="terra-time-input-description-format-045ec847-304b-4212-b07d-522bffa21825"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)
  </div>
</div>
`;

exports[`should render a 12 hour timepicker meridiem with buttons when viewed on a mobile device 1`] = `
<div
  class="time-input-container"
>
  <div
    class="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="terra-time-input-description-format-12910a95-7717-4f29-a861-0feed482d302"
      aria-label="Terra.timeInput.hours"
      class="form-input time-input-hour"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-12910a95-7717-4f29-a861-0feed482d302"
      aria-label="Terra.timeInput.minutes"
      class="form-input time-input-minute"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    class="button-group meridiem-button-group"
  >
    <button
      aria-disabled="false"
      aria-pressed="true"
      class="button neutral button-group-button is-selected meridiem-button"
      type="button"
    >
      <span
        class="button-label text-only"
      >
        <span
          class=""
        >
          Terra.timeInput.am
        </span>
      </span>
    </button>
    <button
      aria-disabled="false"
      class="button neutral button-group-button meridiem-button"
      type="button"
    >
      <span
        class="button-label text-only"
      >
        <span
          class=""
        >
          Terra.timeInput.pm
        </span>
      </span>
    </button>
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
    class="format-text"
    id="terra-time-input-description-format-12910a95-7717-4f29-a861-0feed482d302"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a 24 hour timepicker properly on mobile devices 1`] = `
<div
  class="time-input-container"
>
  <div
    class="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="terra-time-input-description-format-410f1c12-1e86-41a2-a315-8f53b10f594b"
      aria-label="Terra.timeInput.hours"
      class="form-input time-input-hour"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-410f1c12-1e86-41a2-a315-8f53b10f594b"
      aria-label="Terra.timeInput.minutes"
      class="form-input time-input-minute"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
    class="format-text"
    id="terra-time-input-description-format-410f1c12-1e86-41a2-a315-8f53b10f594b"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a 24 hour timepicker with seconds properly on mobile devices 1`] = `
<div
  class="time-input-container"
>
  <div
    class="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="terra-time-input-description-format-937916b9-5fc5-4ac9-86d5-51012f9c2401"
      aria-label="Terra.timeInput.hours"
      class="form-input time-input-hour with-second"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-937916b9-5fc5-4ac9-86d5-51012f9c2401"
      aria-label="Terra.timeInput.minutes"
      class="form-input time-input-minute with-second"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-937916b9-5fc5-4ac9-86d5-51012f9c2401"
      aria-label="Terra.timeInput.seconds"
      class="form-input time-input-second"
      maxlength="2"
      name="terra-time-second-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)"
    class="format-text"
    id="terra-time-input-description-format-937916b9-5fc5-4ac9-86d5-51012f9c2401"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)
  </div>
</div>
`;

exports[`should render a default time input 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-6a3f05ee-dfa0-4a7c-89c9-14b8dbdc1899"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-6a3f05ee-dfa0-4a7c-89c9-14b8dbdc1899"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-6a3f05ee-dfa0-4a7c-89c9-14b8dbdc1899"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a disabled time input 1`] = `
<div
  className="time-input-container"
>
  <div
    className="disabled time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-9d4291a1-94ed-4838-9a43-e1736fff5d9a"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={true}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-9d4291a1-94ed-4838-9a43-e1736fff5d9a"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={true}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-9d4291a1-94ed-4838-9a43-e1736fff5d9a"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a time input with 12 hour clock set 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-6f32d506-2d90-4bbc-baab-ca1e19a690eb"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-6f32d506-2d90-4bbc-baab-ca1e19a690eb"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <ButtonGroup
    className="meridiem-button-group"
    isBlock={false}
    onChange={[Function]}
    selectedKeys={
      Array [
        "Terra.timeInput.am",
      ]
    }
  >
    <ButtonGroupButton
      className="meridiem-button"
      isDisabled={false}
      key="Terra.timeInput.am"
      onBlur={[Function]}
      onFocus={[Function]}
      text="Terra.timeInput.am"
    />
    <ButtonGroupButton
      className="meridiem-button"
      isDisabled={false}
      key="Terra.timeInput.pm"
      onBlur={[Function]}
      onFocus={[Function]}
      text="Terra.timeInput.pm"
    />
  </ButtonGroup>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-6f32d506-2d90-4bbc-baab-ca1e19a690eb"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a time input with a default time 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value="T10:45"
    />
    <Input
      aria-describedby="terra-time-input-description-format-ac276034-786f-449c-9fca-9c3a06fed5be"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value="10"
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-ac276034-786f-449c-9fca-9c3a06fed5be"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value="45"
    />
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-ac276034-786f-449c-9fca-9c3a06fed5be"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a time input with custom attributes 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-3339a889-7622-47d5-a80a-6a4f70a9d3e3"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={false}
      id="terra-time-input"
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-3339a889-7622-47d5-a80a-6a4f70a9d3e3"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={false}
      id="terra-time-input"
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-3339a889-7622-47d5-a80a-6a4f70a9d3e3"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a time input with onBlur 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-f8089930-f436-47ba-a2a2-2b38393501c5"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-f8089930-f436-47ba-a2a2-2b38393501c5"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-f8089930-f436-47ba-a2a2-2b38393501c5"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a time input with onChange 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-44019de4-53a8-4d42-81ff-a0864d3c1f0c"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-44019de4-53a8-4d42-81ff-a0864d3c1f0c"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-44019de4-53a8-4d42-81ff-a0864d3c1f0c"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a time input with onFocus 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-6a7c7ca9-eac6-496d-bb28-cfbf31286e69"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-6a7c7ca9-eac6-496d-bb28-cfbf31286e69"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
    className="format-text"
    id="terra-time-input-description-format-6a7c7ca9-eac6-496d-bb28-cfbf31286e69"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should render a time input with seconds input 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-48de5f37-db87-4b1c-aca4-0f1856da5989"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour with-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-48de5f37-db87-4b1c-aca4-0f1856da5989"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute with-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-48de5f37-db87-4b1c-aca4-0f1856da5989"
      aria-label="Terra.timeInput.seconds"
      className="time-input-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-second-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)"
    className="format-text"
    id="terra-time-input-description-format-48de5f37-db87-4b1c-aca4-0f1856da5989"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)
  </div>
</div>
`;

exports[`should render a time input with seconds input and a value 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value="T12:12:12"
    />
    <Input
      aria-describedby="terra-time-input-description-format-6f008641-c519-4b5d-bb57-e5d052e812af"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour with-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value="12"
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-6f008641-c519-4b5d-bb57-e5d052e812af"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute with-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value="12"
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-6f008641-c519-4b5d-bb57-e5d052e812af"
      aria-label="Terra.timeInput.seconds"
      className="time-input-second"
      disabled={false}
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-second-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value="12"
    />
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)"
    className="format-text"
    id="terra-time-input-description-format-6f008641-c519-4b5d-bb57-e5d052e812af"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)
  </div>
</div>
`;

exports[`should render a time input with seconds input and custom attributes 1`] = `
<div
  className="time-input-container"
>
  <div
    className="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <Input
      aria-describedby="terra-time-input-description-format-f358559c-bcd4-42c6-9119-b157a69b9c4d"
      aria-label="Terra.timeInput.hours"
      className="time-input-hour with-second"
      disabled={false}
      id="terra-time-input"
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-f358559c-bcd4-42c6-9119-b157a69b9c4d"
      aria-label="Terra.timeInput.minutes"
      className="time-input-minute with-second"
      disabled={false}
      id="terra-time-input"
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
    <span
      className="time-spacer"
    >
      :
    </span>
    <Input
      aria-describedby="terra-time-input-description-format-f358559c-bcd4-42c6-9119-b157a69b9c4d"
      aria-label="Terra.timeInput.seconds"
      className="time-input-second"
      disabled={false}
      id="id-0"
      isIncomplete={false}
      isInvalid={false}
      maxLength="2"
      name="terra-time-second-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)"
    className="format-text"
    id="terra-time-input-description-format-f358559c-bcd4-42c6-9119-b157a69b9c4d"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)
  </div>
</div>
`;

exports[`should set the labels with the correct htmlFor a 24 hour timepicker properly on mobile devices 1`] = `
<div
  class="time-input-container"
>
  <div
    class="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="terra-time-input-description-format-2437b52c-2996-4e42-aa97-c9c516ba66e5"
      aria-label="Terra.timeInput.hours"
      class="form-input time-input-hour"
      id="id-2"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-2437b52c-2996-4e42-aa97-c9c516ba66e5"
      aria-label="Terra.timeInput.minutes"
      class="form-input time-input-minute"
      id="id-1"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm)"
    class="format-text"
    id="terra-time-input-description-format-2437b52c-2996-4e42-aa97-c9c516ba66e5"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm)
  </div>
</div>
`;

exports[`should set the labels with the correct htmlFor a 24 hour timepicker properly on mobile devices 2`] = `
<div
  class="time-input-container"
>
  <div
    class="time-input"
  >
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="terra-time-input-description-format-c51d3231-2c29-4270-9efa-57f146bfb4ca"
      aria-label="Terra.timeInput.hours"
      class="form-input time-input-hour with-second"
      id="id-2"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-c51d3231-2c29-4270-9efa-57f146bfb4ca"
      aria-label="Terra.timeInput.minutes"
      class="form-input time-input-minute with-second"
      id="id-1"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      class="time-spacer"
    >
      :
    </span>
    <input
      aria-describedby="terra-time-input-description-format-c51d3231-2c29-4270-9efa-57f146bfb4ca"
      aria-label="Terra.timeInput.seconds"
      class="form-input time-input-second"
      id="id-0"
      maxlength="2"
      name="terra-time-second-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Time Format: (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)"
    class="format-text"
    id="terra-time-input-description-format-c51d3231-2c29-4270-9efa-57f146bfb4ca"
  >
    (Terra.timeInput.hh:Terra.timeInput.mm:Terra.timeInput.ss)
  </div>
</div>
`;
